ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtechserver
  namespace: rust_app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: shadowbroker.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mtechserver
            port:
              number: 8080
